[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Script_PlayerInventory.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Script_ShopInventory.gd" type="Script" id=2]
[ext_resource path="res://Assets/Images/icon.png" type="Texture" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxTexture" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="Control" type="Control"]
modulate = Color( 1, 1, 1, 0.882353 )
rect_scale = Vector2( 0.998334, 1 )
rect_pivot_offset = Vector2( -220, -210 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 60.4673
margin_top = 50.0
margin_right = 960.467
margin_bottom = 550.0
script = ExtResource( 2 )

[node name="Sprite_DraggedItem" type="Sprite" parent="Panel"]
visible = false
z_index = 1
z_as_relative = false

[node name="ItemList" type="ItemList" parent="Panel"]
margin_left = 30.0
margin_top = 30.0
margin_right = 301.0
margin_bottom = 470.0
custom_styles/selected_focus = SubResource( 1 )
custom_styles/bg_focus = SubResource( 2 )
custom_styles/cursor_unfocused = SubResource( 3 )
custom_styles/selected = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
custom_colors/guide_color = Color( 0, 0, 0, 0 )
custom_constants/vseparation = 10
custom_constants/hseparation = 15
auto_height = true
max_columns = 0
same_column_width = true
icon_mode = 0
fixed_icon_size = Vector2( 48, 48 )

[node name="ItemList2" type="ItemList" parent="Panel"]
margin_left = 601.001
margin_top = 30.0
margin_right = 872.001
margin_bottom = 470.0
custom_styles/selected_focus = SubResource( 1 )
custom_styles/bg_focus = SubResource( 2 )
custom_styles/cursor_unfocused = SubResource( 3 )
custom_styles/selected = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
custom_colors/guide_color = Color( 0, 0, 0, 0 )
custom_constants/vseparation = 10
custom_constants/hseparation = 15
auto_height = true
max_columns = 0
same_column_width = true
icon_mode = 0
fixed_icon_size = Vector2( 48, 48 )

[node name="Button_Save" type="Button" parent="Panel"]
margin_left = 300.0
margin_top = 440.0
margin_right = 390.0
margin_bottom = 490.0
text = "Save"

[node name="Button_AddItem" type="Button" parent="Panel"]
modulate = Color( 1, 1, 1, 0.882353 )
margin_left = 400.668
margin_top = 440.0
margin_right = 490.668
margin_bottom = 490.0
text = "Add Item"

[node name="WindowDialog_AddItemWindow" type="WindowDialog" parent="Panel"]
editor/display_folded = true
margin_left = 240.0
margin_top = 160.0
margin_right = 610.0
margin_bottom = 300.0
window_title = "Add Item"

[node name="AddItemWindow_Label_ItemID" type="Label" parent="Panel/WindowDialog_AddItemWindow"]
margin_left = 125.0
margin_top = 40.0
margin_right = 179.0
margin_bottom = 54.0
size_flags_vertical = 0
text = "Item ID:"
align = 2
valign = 1

[node name="AddItemWindow_SpinBox_ItemID" type="SpinBox" parent="Panel/WindowDialog_AddItemWindow"]
margin_left = 185.0
margin_top = 34.0
margin_right = 259.0
margin_bottom = 58.0
min_value = 1.0
value = 1.0

[node name="AddItemWindow_Button_AddItem" type="Button" parent="Panel/WindowDialog_AddItemWindow"]
margin_left = 80.0
margin_top = 90.0
margin_right = 180.0
margin_bottom = 120.0
text = "Add"

[node name="AddItemWindow_Button_Close" type="Button" parent="Panel/WindowDialog_AddItemWindow"]
margin_left = 200.0
margin_top = 90.0
margin_right = 300.0
margin_bottom = 120.0
text = "Close"

[node name="WindowDialog_SplitItemWindow" type="WindowDialog" parent="Panel"]
editor/display_folded = true
margin_left = 240.0
margin_top = 160.0
margin_right = 610.0
margin_bottom = 300.0
window_title = "Split Item"

[node name="SplitItemWindow_Button_Split" type="Button" parent="Panel/WindowDialog_SplitItemWindow"]
margin_left = 80.0
margin_top = 90.0
margin_right = 180.0
margin_bottom = 120.0
text = "Split"

[node name="SplitItemWindow_Button_Cancel" type="Button" parent="Panel/WindowDialog_SplitItemWindow"]
margin_left = 200.0
margin_top = 90.0
margin_right = 300.0
margin_bottom = 120.0
text = "Cancel"

[node name="SplitItemWindow_HSlider_Amount" type="HSlider" parent="Panel/WindowDialog_SplitItemWindow"]
margin_left = 80.0
margin_top = 30.0
margin_right = 300.0
margin_bottom = 46.0
min_value = 1.0
value = 1.0
tick_count = 1
ticks_on_borders = true

[node name="SplitItemWindow_Label_Amount" type="Label" parent="Panel/WindowDialog_SplitItemWindow"]
margin_left = 80.0
margin_top = 60.0
margin_right = 300.0
margin_bottom = 74.0
text = "1"
align = 1

[node name="WindowDialog_ItemMenu" type="WindowDialog" parent="Panel"]
margin_left = 300.0
margin_top = 130.0
margin_right = 590.0
margin_bottom = 370.0

[node name="ItemMenu_TextureFrame_Icon" type="TextureRect" parent="Panel/WindowDialog_ItemMenu"]
margin_left = 120.0
margin_top = 10.0
margin_right = 168.0
margin_bottom = 58.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="ItemMenu_RichTextLabel_ItemInfo" type="RichTextLabel" parent="Panel/WindowDialog_ItemMenu"]
margin_left = 10.0
margin_top = 70.0
margin_right = 280.0
margin_bottom = 170.0
bbcode_enabled = true

[node name="ItemMenu_Button_DropItem" type="Button" parent="Panel/WindowDialog_ItemMenu"]
margin_left = 31.8307
margin_top = 190.0
margin_right = 131.831
margin_bottom = 220.0
text = "Drop"

[node name="ItemMenu_Button_DropAllItem" type="Button" parent="Panel/WindowDialog_ItemMenu"]
margin_left = 168.05
margin_top = 190.735
margin_right = 268.05
margin_bottom = 220.735
text = "Drop All"

[node name="Label" type="Label" parent="Panel"]
margin_left = 120.2
margin_top = 14.0
margin_right = 181.2
margin_bottom = 28.0
text = "Inventory"

[node name="Label2" type="Label" parent="Panel"]
margin_left = 671.118
margin_top = 14.0
margin_right = 732.118
margin_bottom = 28.0
text = "Shop"
align = 2
[connection signal="item_rmb_selected" from="Panel/ItemList" to="." method="_on_ItemList_item_rmb_selected"]
[connection signal="mouse_entered" from="Panel/ItemList" to="." method="_on_ItemList_mouse_entered"]
[connection signal="mouse_exited" from="Panel/ItemList" to="." method="_on_ItemList_mouse_exited"]
[connection signal="item_rmb_selected" from="Panel/ItemList2" to="Panel" method="_on_ItemList2_item_rmb_selected"]
[connection signal="mouse_entered" from="Panel/ItemList2" to="Panel" method="_on_ItemList2_mouse_entered"]
[connection signal="mouse_exited" from="Panel/ItemList2" to="Panel" method="_on_ItemList2_mouse_exited"]
[connection signal="pressed" from="Panel/Button_Save" to="." method="_on_Button_Save_pressed"]
[connection signal="pressed" from="Panel/Button_AddItem" to="." method="_on_Button_AddItem_pressed"]
[connection signal="pressed" from="Panel/WindowDialog_AddItemWindow/AddItemWindow_Button_AddItem" to="." method="_on_AddItemWindow_Button_AddItem_pressed"]
[connection signal="pressed" from="Panel/WindowDialog_AddItemWindow/AddItemWindow_Button_Close" to="." method="_on_AddItemWindow_Button_Close_pressed"]
[connection signal="pressed" from="Panel/WindowDialog_SplitItemWindow/SplitItemWindow_Button_Split" to="." method="_on_SplitItemWindow_Button_Split_pressed"]
[connection signal="pressed" from="Panel/WindowDialog_SplitItemWindow/SplitItemWindow_Button_Cancel" to="." method="_on_SplitItemWindow_Button_Cancel_pressed"]
[connection signal="value_changed" from="Panel/WindowDialog_SplitItemWindow/SplitItemWindow_HSlider_Amount" to="." method="_on_SplitItemWindow_HSlider_Amount_value_changed"]
[connection signal="pressed" from="Panel/WindowDialog_ItemMenu/ItemMenu_Button_DropItem" to="." method="_on_ItemMenu_Button_DropItem_pressed"]
[connection signal="pressed" from="Panel/WindowDialog_ItemMenu/ItemMenu_Button_DropAllItem" to="." method="_on_ItemMenu_Button_DropAllItem_pressed"]
